# certificate-manager-api

./: README.md  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  sql_app.db  sqlapp.db
